# obs-squawk-croc

./: CMakeLists.txt  CMakePresets.json
src/: audio-thread.cpp  audio-thread.h  input-thread.cpp  input-thread.h  plugin-main.c  squawk-source.cpp  squawk-source.h  tts-utils.cpp
